k8s/apps/stremio/internet-archive-addon-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: internet-archive-addon
  namespace: stremio
spec:
  type: ClusterIP
  selector:
    app: internet-archive-addon
  ports:
    - name: http
      port: 7000
      targetPort: http
