k8s/apps/stremio/prowlarr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: stremio
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
